--- a/API/src/data/cleaningTasksCatalogue.json
+++ b/API/src/data/cleaningTasksCatalogue.json
@@ -3,7 +3,7 @@
     "taskId": "salvage_gate_ruins",
     "name": "Salvage Gate Ruins",
     "description": "Dismantle the collapsed gate to gather materials and open the homestead entrance.",
-    "unlocks": "entrance",
+    "unlocks": "homestead",
     "duration": 12000,
     "difficulty": "Easy",
     "rewards": {
@@ -36,7 +36,7 @@
     "unlocks": "farming",
     "duration": 20000,
     "difficulty": "Medium",
-    "dependsOn": "clear_out_ruins",
+    "dependsOn": "salvage_gate_ruins",
     "rewards": {
       "scrap": { "min": 10, "max": 20, "chance": 1 },
       "carrot_seeds": { "min": 1, "max": 3, "chance": 1 },
@@ -53,7 +53,7 @@
     "unlocks": "map",
     "duration": 22000,
     "difficulty": "Hard",
-    "dependsOn": "clear_farm_land",
+    "dependsOn": "salvage_gate_ruins",
     "rewards": { "map": { "min": 1, "max": 1, "chance": 1 } },
     "requiredStats": { "perception": 2, "speed": 1 },
     "icon": "GiMap"
@@ -65,7 +65,7 @@
     "unlocks": "crafting",
     "duration": 25000,
     "difficulty": "Hard",
-    "dependsOn": "scout_surrounding_area",
+    "dependsOn": "salvage_gate_ruins",
     "rewards": {
       "wood": { "min": 15, "max": 20, "chance": 1 },
       "scrap": { "min": 5, "max": 8, "chance": 1 },
@@ -81,7 +81,7 @@
     "unlocks": "defence",
     "duration": 30000,
     "difficulty": "Hard",
-    "dependsOn": "clean_out_workshop",
+    "dependsOn": "salvage_gate_ruins",
     "rewards": {
       "scrap": { "min": 10, "max": 20, "chance": 1 },
       "metal": { "min": 5, "max": 10, "chance": 1 },
