--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node --project tsconfig.json src/index.ts",
+    "dev": "nodemon --watch src --ext ts --exec ts-node --project tsconfig.json src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest --runInBand",
