--- a/API/package.json
+++ b/API/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec ts-node --project tsconfig.json src/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --watch src --ext ts --exec ts-node --project tsconfig.json src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest --runInBand",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "kill": "taskkill /IM node.exe /F"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +20,8 @@
     "eslint": "^9.34.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.0.0",
     "jest": "^30.0.5",
     "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
