--- a/API/src/data/cleaningTasksCatalogue.json
+++ b/API/src/data/cleaningTasksCatalogue.json
@@ -85,7 +85,7 @@
         "max": 20,
         "chance": 1
       },
-      "canned_beans": {
+      "canned_fish": {
         "min": 1,
         "max": 2,
         "chance": 0.8
@@ -233,7 +233,7 @@
         "max": 2,
         "chance": 0.35
       },
-      "canned_beans": {
+      "canned_fish": {
         "min": 1,
         "max": 1,
         "chance": 0.5
